add signin-out-up to nav partial and include in index

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -1,4 +1,4 @@
-<html>
+<html ng-app="akjch">
 <head>
     <title>
         Dashboard
@@ -21,6 +21,8 @@
 <!--endbower-->
 <!--inject:js-->
 <script src="/js/app.js"></script>
+<script src="/js/controllers/signinCtrl.js"></script>
+<script src="/js/controllers/signupCtrl.js"></script>
 <!--endinject-->
 
 </body>
