--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,12 +2,9 @@
     <div class="row">
         <div class="col-sm-12">
             <ul>
-                <li><a href="/login">Login</a></li>
-                <li><a href="#!">Hi</a></li>
-                <li><a href="/logout">Logout</a></li>
-                <%if (msg){%>
-                    <li>dwedwe</li>
-                <%}%>
+                <li><a href="#!" ui-sref="signIn">Sign In</a></li>
+                <li><a href="#!" ui-sref="signUp">Sign up</a></li>
+
             </ul>
         </div>
     </div>
