--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,3 +1,4 @@
+<!--TODO: replace ng-form with vanilla html form-->
 <form ng-submit="send(user)">
 <input type="text" placeholder="enter username" ng-model="user.name">
 <input type="password" placeholder="enter password" ng-model="user.password">
