securing- if request has user, render with username else redirect

--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -1,5 +1,14 @@
+
+<form name="signin" action="/auth/signin" method="POST">
+    <input type="text" name="uname" id="username" placeholder="username...">
+    <input type="password" name="pass" id="password" placeholder="Password...">
+    <input type="submit" value ="Sign In">
+</form>
+
+
+<!--
 <form ng-submit="send(user)">
     <input type="text" placeholder="enter username" ng-model ="user.name">
     <input type="password" placeholder="enter password" ng-model="user.password">
     <input type="submit" value="Sign In">
-</form>
+</form>-->
