--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,7 +1,20 @@
-<!--TODO: replace ng-form with vanilla html form-->
+<form name="signup" action="/auth/signup" method="POST">
+    <input type="text" name="uname" id="username" placeholder="username...">
+    <input type="password" name="pass" id="password" placeholder="Password...">
+    <input type="submit" value ="Sign ">
+</form>
+
+
+
+
+
+
+<!--
+TODO: replace ng-form with vanilla html form
 <form ng-submit="send(user)">
 <input type="text" placeholder="enter username" ng-model="user.name">
 <input type="password" placeholder="enter password" ng-model="user.password">
 <input type="submit" value="Sign Up">
 
 </form>
+-->
