--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-<h2>Dashboard</h2>
+<h2><%=name%>'s Dashboard</h2>
 <!--bower:js-->
 <script src="../lib/angular/angular.js"></script>
 <script src="../lib/angular-ui-router/release/angular-ui-router.js"></script>
