--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -1,7 +1,7 @@
 
 <form name="signin" action="/auth/signin" method="POST">
     <input type="text" name="uname" id="username" placeholder="username...">
-    <input type="password" name="pass" id="password" placeholder="Password...">
+    <input type="password" name="pass" id="password" placeholder="password...">
     <input type="submit" value ="Sign In">
 </form>
 
