--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,6 +1,6 @@
 <form name="signup" action="/auth/signup" method="POST">
     <input type="text" name="uname" id="username" placeholder="username...">
-    <input type="password" name="pass" id="password" placeholder="Password...">
+    <input type="password" name="pass" id="password" placeholder="password...">
     <input type="submit" value ="Sign ">
 </form>
 
