--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -13,6 +13,13 @@
 </head>
 <body>
 <h2><span id="user"><%=name%></span>'s Dashboard</h2>
+<br>
+    Username: <%=user%>
+    <br>
+    id: <%=id%>
+
+
+<a href="/dashboard/logout">Logout</a>
 <!--bower:js-->
 <script src="../lib/angular/angular.js"></script>
 <script src="../lib/angular-ui-router/release/angular-ui-router.js"></script>
