add email, full name fields (no required set for dev phase)

--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,7 +1,9 @@
 <form name="signup" action="/auth/signup" method="POST">
-    <input type="text" name="uname" id="username" placeholder="username...">
-    <input type="password" name="pass" id="password" placeholder="password...">
-    <input type="submit" value ="Sign ">
+    <input type="text" name="uname" id="username" placeholder="username..." required  autocomplete="off">
+    <input type="password" name="pass" id="password" placeholder="password..." autocomplete="off">
+    <input type="email" name="email" id="email" placeholder="email" autocomplete="off">
+    <input type="name" name="name" id="name" placeholder="your full name" autocomplete="off">
+    <input type="submit" value ="Sign Up">
 </form>
 
 
