update index and subnav views

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,6 +22,7 @@
     <!--endbower-->
     <!--inject:js-->
     <script src="/js/app.js"></script>
+    <script src="/js/controllers/portfolioCtrl.js"></script>
     <script src="/js/controllers/signinCtrl.js"></script>
     <script src="/js/controllers/signupCtrl.js"></script>
     <!--endinject-->
