--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -43,6 +43,7 @@
 <script src="/js/controllers/portfolioCtrl.js"></script>
 <script src="/js/controllers/signinCtrl.js"></script>
 <script src="/js/controllers/signupCtrl.js"></script>
+<script src="/js/factories/stockFactory.js"></script>
 <!--endinject-->
 
 </body>
