--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,7 @@
     <script src="../lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="../lib/jquery/dist/jquery.js"></script>
     <script src="../lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../lib/angular-toArrayFilter/toArrayFilter.js"></script>
     <!--endbower-->
     <!--inject:js-->
     <script src="/js/app.js"></script>
