--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -3,7 +3,7 @@
     <input type="password" name="pass" id="password" placeholder="password..." autocomplete="off">
     <input type="email" name="email" id="email" placeholder="email" autocomplete="off">
     <input type="name" name="name" id="name" placeholder="your full name" autocomplete="off">
-    <input type="submit" value ="Sign Up">
+    <input type="submit" value ="Go!">
 </form>
 
 
