--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,34 @@
-<nav class="container">
+<section class="entry row">
+    <div class="col-sm-6 intro">
+        <div class="bold-text">
+            AKJ
+        </div>
+        <div class="subtext">
+            dev challenge
+        </div>
+    </div>
+    <div class="col-sm-6 sign-box">
+        <div class="forms" ui-view></div>
+        <a href="#!" class="but" ui-sref="signIn">Sign In</a>
+        <a href="#!" class="but signUp" ui-sref="signUp">Sign up</a>
+
+    </div>
+
+</div>
+
+
+
+
+
+
+
+<!--
+<nav class="headmenu container">
     <div class="row">
         <div class="col-sm-12">
             <ul>
-                <li><a href="#!" ui-sref="signIn">Sign In</a></li>
-                <li><a href="#!" ui-sref="signUp">Sign up</a></li>
 
             </ul>
         </div>
     </div>
-</nav>
+</nav>-->
