--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -1,8 +1,8 @@
 
 <form name="signin" action="/auth/signin" method="POST">
-    <input type="text" name="uname" id="username" placeholder="username...">
-    <input type="password" name="pass" id="password" placeholder="password...">
-    <input type="submit" value ="Sign In">
+    <input type="text" name="uname" id="username" placeholder="username..." required autocomplete="off">
+    <input type="password" name="pass" id="password" placeholder="password..." required autocomplete="off">
+    <input type="submit" value ="Go!">
 </form>
 
 
