--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css" />
         <!--endbower-->
         <!--inject:css-->
+    <link rel="stylesheet" href="/css/dashboard.css">
         <!--endinject-->
 
 </head>
