--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,12 +8,21 @@
     <link rel="stylesheet" href="../lib/font-awesome/css/font-awesome.css" />
     <!--endbower-->
     <!--inject:css-->
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <!--endinject-->
 </head>
 
 <body>
-    <% include ../partials/nav%>
-    <div ui-view></div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12" id="underlay">
+                <% include ../partials/nav%>
+            </div>
+        </div>
+    </div>
+
     <!--bower:js-->
     <script src="../lib/angular/angular.js"></script>
     <script src="../lib/angular-ui-router/release/angular-ui-router.js"></script>
