--- a/views/partials/subnav.ejs
+++ b/views/partials/subnav.ejs
@@ -1,6 +1,7 @@
 <nav class="subnav">
     <ul>
         <li><a href="#!" ui-sref="portfolios">Portfolios</a></li>
+        <li><a href="#!">Compare Portfolios</a></li>
         <li><a href="/dashboard/logout">Logout</a></li>
     </ul>
 </nav>
