--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -40,16 +40,18 @@
 <script src="../lib/jquery/dist/jquery.js"></script>
 <script src="../lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../lib/angular-toArrayFilter/toArrayFilter.js"></script>
+<script src="../lib/highcharts-ng/dist/highcharts-ng.js"></script>
 <!--endbower-->
 <!--inject:js-->
 <script src="/js/app.js"></script>
+<script src="/js/factories/portfolioFactory.js"></script>
+<script src="/js/factories/stockFactory.js"></script>
+<script src="/js/controllers/compareCtrl.js"></script>
 <script src="/js/controllers/portfolioCtrl.js"></script>
 <script src="/js/controllers/signinCtrl.js"></script>
 <script src="/js/controllers/signupCtrl.js"></script>
-<script src="/js/factories/portfolioFactory.js"></script>
-<script src="/js/factories/stockFactory.js"></script>
 <!--endinject-->
-
+<script src="http://code.highcharts.com/stock/highstock.src.js"></script>
 </body>
 
 </html>
