--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,14 +29,16 @@
     <script src="../lib/jquery/dist/jquery.js"></script>
     <script src="../lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../lib/angular-toArrayFilter/toArrayFilter.js"></script>
+    <script src="../lib/highcharts-ng/dist/highcharts-ng.js"></script>
     <!--endbower-->
     <!--inject:js-->
     <script src="/js/app.js"></script>
+    <script src="/js/factories/portfolioFactory.js"></script>
+    <script src="/js/factories/stockFactory.js"></script>
+    <script src="/js/controllers/compareCtrl.js"></script>
     <script src="/js/controllers/portfolioCtrl.js"></script>
     <script src="/js/controllers/signinCtrl.js"></script>
     <script src="/js/controllers/signupCtrl.js"></script>
-    <script src="/js/factories/portfolioFactory.js"></script>
-    <script src="/js/factories/stockFactory.js"></script>
     <!--endinject-->
 </body>
 
