--- a/public/partials/compare.html
+++ b/public/partials/compare.html
@@ -17,17 +17,21 @@
         </ul>
     </div>
 </div>
-<div class="col-sm-6">
-    <h5 class="text-center">Historical Comparison</h5>
+<div ng-if="!historySelected" class="intro col-sm-6">
+    <h1 class="text-center">Compare Historical Data</h1>
+    <p>Select your portfolios to see the historical data of your stocks. You can then add individual stocks and compare
+    them along with your portfolios.</p>
+</div>
+<div ng-if="historySelected" class="col-sm-6">
     <highchart id="chart1" config="chartConfig"></highchart>
 </div>
 
 
 
-<div ng-if="chartloaded" class="addPortfolios col-sm-3">
-    <h4>Add Individual Portfolio to compare</h4>
+<!--List of stocks-->
+<div ng-if="!chartConfig.loading && chartloaded" class="addPortfolios col-sm-3">
+    <h4>Add Individual Stock to compare</h4>
 
-    <input type="text" name="portfolioName" ng-model="portfolioName" placeholder="Begin by typing your portfolio name">
     <input type="text" ng-model="searchText" placeholder="type to search">
     <div class="stocks">
         <ul ng-repeat="stock in MasterStocks | toArray | filter: searchText">
