--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:500,400,300);
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:800|Martel:200|Open+Sans:400,300);
 /*palette from http://www.colourlovers.com/palette/59867/Blown_Entrepreneur*/
 body{
     -webkit-font-smoothing: antialiased;
@@ -25,9 +25,118 @@ h1,h2,h3,h4,h5,h6{
 
 header{
     background-color: #C6D4E1;
-    height:200px;
+    height:80px;
+    -webkit-box-shadow: inset 0px -200px 21px -200px rgba(0,0,0,0.31);
+    -moz-box-shadow: inset 0px -200px 21px -200px rgba(0,0,0,0.31);
+    box-shadow: inset 0px -200px 21px -200px rgba(0,0,0,0.31);
+}
+header > .user{
+    font-size:18px;
+
 }
 
+
+
+a,
+a:hover,
+a:active,
+a:visited,
+a:focus{
+    text-decoration: none;
+    color:#3d3d3d;
+}
+
+a:hover{
+    color: #000000;
+}
+
+
+.welcome{
+    font-family:'Open Sans';
+    font-weight: 400;
+    letter-spacing:3px;
+    word-spacing: 6px;
+    color: #3d3d3d;
+    padding-left:40px;
+
+}
+.welcome span{
+    font-family:'Open Sans';
+    font-weight: 200;
+}
+.subtext{
+    padding-left:40px;
+    font-size: 18px;
+    color:indianred;
+}
+.cards{
+    margin-top:60px;
+    background-color: #FFF;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(61,61,61,0.36);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(61,61,61,0.36);
+    box-shadow: 0px 0px 5px 0px rgba(61,61,61,0.36);
+    transition: all 0.2s ease;
+}
+.cards:hover{
+    -webkit-box-shadow: -1px 1px 17px 0px rgba(61,61,61,0.36);
+    -moz-box-shadow: -1px 1px 17px 0px rgba(61,61,61,0.36);
+    box-shadow: -1px 1px 17px 0px rgba(61,61,61,0.36);
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+.card{
+    height:400px; /*400*/
+
+}
+.card > .ico{
+    width:150px;
+    height:180px;
+    margin:0 auto;
+    margin-top:30px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.card > p{
+    margin-top:20px;
+    text-align: center;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:18px;
+    color: indianred;
+}
+.portfolio.card > .ico{
+    background-image:url('../img/portfolios.svg');
+}
+.compare.card > .ico{
+    background-image:url('../img/compare.svg');
+}
+
+
+.card > h4{
+    font-family:'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size:48px;
+    font-weight:200;
+    text-align: center;
+    text-transform:uppercase;
+    letter-spacing:4px;
+    color:#8a8a8a;
+
+}
+
+.soft-nav ul{
+    list-style-type: none;
+    float:right;
+    padding:0;
+    margin-top:30px;
+}
+.soft-nav ul li {
+    display: block;
+    float:left;
+}
+.soft-nav ul li a{
+    padding:20px;
+
+
+}
 
 .subnav a{
     color: #384047;
@@ -79,8 +188,6 @@ input[type=text]{
     padding-left:12px;
     outline:none;
     border:1px solid BDB8AD;
-
-
 
 }
 
@@ -291,7 +398,26 @@ a.deletePortfolio:focus{
     top:6px;
     left:70%;
 }
-.alert-user{
-    margin-top:40px;
+.alert-user > h4{
+    font-size:32px;
+    line-height:60px;
+    font-family: 'Martel';
+}
+.alert-user > p{
+    font-size:22px;
+}
+.alert-user.compare{
+    margin-top:70px;
+}
+
+.saved-portfolios > a{
+    display: none;
+}
+
+.user span{
+    font-size:26px;
+    color:#eee;
+    padding:10px;
+
 }
 /*================== SAVED PORTFOLIOS==================*/
